# grok-fleet-orchestrator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  uninstall.sh
.Jules/: palette.md
.github/workflows/: ci.yml  release.yml
crates/fleet-api/: Cargo.toml
crates/fleet-api/src/: app.rs  cloudflare.rs  error.rs  handlers.rs  lib.rs  metrics.rs  schema.rs  test_support.rs
crates/fleet-api/tests/: api_flow.rs  bootstrap_tokens.rs  cloudflare_access.rs  metrics_endpoint.rs  transport_integration.rs
crates/fleet-cli/: Cargo.toml
crates/fleet-cli/src/: doctor.rs  logging.rs  main.rs  mtls.rs  runtime.rs  token.rs  users.rs
crates/fleet-core/: Cargo.toml
crates/fleet-core/src/: auth.rs  bootstrap_token.rs  config.rs  error.rs  events.rs  ids.rs  lib.rs  task.rs  worker.rs
crates/fleet-core/src/auth/: password.rs
crates/fleet-core/tests/: lifecycle.rs
crates/fleet-dashboard/: Cargo.toml
crates/fleet-dashboard/assets/: app.js  bootstrap.html  index.html  login.css  login.html  styles.css
crates/fleet-dashboard/src/: app.rs  assets.rs  auth.rs  auth_util.rs  handlers.rs  lib.rs  schema.rs  sse.rs
crates/fleet-dashboard/tests/: dashboard_api.rs
crates/fleet-mcp/: Cargo.toml
crates/fleet-mcp/src/: handlers.rs  lib.rs  schema.rs  server.rs
crates/fleet-mcp/tests/: cross_client.rs
crates/fleet-provisioner/: Cargo.toml
crates/fleet-provisioner/src/: error.rs  inventory.rs  lib.rs  playbook.rs  ssh.rs  steps.rs  templates.rs
crates/fleet-provisioner/src/steps/: check_prereqs.rs  install_cloudflared.rs  install_deps.rs  install_fleet_worker.rs  install_grok.rs  start_services.rs
crates/fleet-provisioner/tests/: playbook_dry_run.rs  verify_examples.rs
crates/fleet-scheduler/: Cargo.toml
crates/fleet-scheduler/src/: breaker.rs  dispatcher.rs  health.rs  lib.rs  selector.rs  state.rs  sync.rs
crates/fleet-scheduler/tests/: dispatch_e2e.rs
crates/fleet-store/: Cargo.toml
crates/fleet-store/migrations/: 001_init.sql  002_indexes.sql  003_bootstrap_tokens.sql  004_rbac.sql
crates/fleet-store/src/: error.rs  lib.rs  listener.rs  postgres.rs  rbac.rs
crates/fleet-store/tests/: integration.rs
crates/fleet-transport/: Cargo.toml
crates/fleet-transport/src/: acp_transport.rs  error.rs  lib.rs  mock.rs  mtls_proxy.rs  tls.rs
crates/fleet-transport/src/acp/: error.rs  messages.rs  mod.rs  transport.rs
crates/fleet-transport/tests/: acp_client.rs  acp_concurrent.rs  acp_reconnect.rs  acp_transport_integration.rs  acp_transport_mtls.rs  e2e_with_real_grok.rs  mtls_handshake.rs  mtls_proxy.rs
crates/fleet-worker/: Cargo.toml
crates/fleet-worker/src/: config.rs  error.rs  grok_process.rs  join.rs  lib.rs  main.rs  registration.rs  runner.rs
crates/fleet-worker/tests/: join.rs  verify_examples.rs  worker_lifecycle.rs
docs/: api-reference.md  architecture.md  deployment.md  reuse-patterns.md  ui-design.md
examples/: README.md  fleet-worker.service  fleet.env  fleet.service  mcp-clients.json  worker.toml  workers.yaml
