[package]
name = "fleet-cli"
description = "Command-line interface for Grok Fleet Orchestrator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["acp"]
# ACP transport — `--transport acp` 모드 활성화 (grok agent serve와 통신).
# 기본 켜짐; rustls을 빼서 바이너리를 줄이려면 `--no-default-features` 사용.
acp = ["fleet-transport/acp"]
# mTLS: 사설 CA + 클라이언트 인증서 기반 orchestrator↔worker TLS 보호.
# `fleet mtls` 서브커맨드와 `--mtls-ca/--mtls-cert/--mtls-key` 플래그 활성화.
mtls = ["fleet-transport/mtls", "dep:rcgen"]

[[bin]]
name = "fleet"
path = "src/main.rs"

# ─── cargo-binstall 메타데이터 ─────────────────────────────────────────
# `cargo binstall --git <repo> fleet-cli` 로 미리 빌드된 `fleet` 바이너리를
# 설치. tarball 은 release.yml 에서 생성되며 동일 아카이브에 `fleet-worker`
# 바이너리도 함께 포함되어 있다 (fleet-worker 패키지 메타데이터 참조).
#
# 템플릿 변수:
#   { repo }    = workspace.package.repository
#   { version } = Cargo.toml version (v 접두사 없음)
#   { target }  = rustc target triple (예: x86_64-unknown-linux-gnu)
#   { bin }     = `[[bin]] name` (위에서 "fleet")
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/fleet-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }"
pkg-fmt = "tgz"

[dependencies]
fleet-core = { workspace = true }
fleet-store = { workspace = true }
fleet-transport = { workspace = true }
fleet-scheduler = { workspace = true }
fleet-mcp = { workspace = true }
fleet-api = { workspace = true }
fleet-provisioner = { workspace = true }
fleet-dashboard = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# mTLS-only (optional; Phase 8.5)
rcgen = { workspace = true, optional = true, features = ["pem", "x509-parser"] }
time = "0.3"

[dev-dependencies]
tempfile = "3"
# rustls-pemfile 단위 테스트용 (mtls feature 켜진 빌드에서만 사용).
rustls-pemfile = { workspace = true }
rustls = { workspace = true }
