[package]
name = "fleet-core"
description = "Domain models for Grok Fleet Orchestrator (Task, Worker, FleetEvent)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
toml = "0.8"
