[package]
name = "fleet-mcp"
description = "MCP server exposing fleet tools to AI coding clients."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fleet-core = { workspace = true }
fleet-store = { workspace = true }
fleet-scheduler = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "fleet_mcp"
path = "src/lib.rs"

[dev-dependencies]
chrono = { workspace = true }
