[package]
name = "fleet-provisioner"
description = "SSH-based remote provisioning automation for fleet workers (russh)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# 기본: russh 실제 SSH 클라이언트 포함.
# `--no-default-features` 시 MockExecutor만 사용 (CI/테스트 환경).
default = ["ssh"]
ssh = ["dep:russh", "dep:russh-keys"]

[dependencies]
fleet-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
russh = { workspace = true, optional = true }
russh-keys = { workspace = true, optional = true }

[lib]
name = "fleet_provisioner"
path = "src/lib.rs"

[dev-dependencies]
chrono = { workspace = true }
tempfile = "3"
