[package]
name = "fleet-scheduler"
description = "Worker selection, dispatching, and fault isolation for Grok Fleet Orchestrator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fleet-core = { workspace = true }
fleet-store = { workspace = true }
fleet-transport = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
