[package]
name = "fleet-store"
description = "Store trait and PostgreSQL implementation for Grok Fleet Orchestrator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fleet-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
fleet-core = { workspace = true }
