[package]
name = "fleet-worker"
description = "Worker daemon: manages grok agent serve subprocess and registers with the fleet orchestrator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fleet-worker"
path = "src/main.rs"

# ─── cargo-binstall 메타데이터 ─────────────────────────────────────────
# `cargo binstall --git <repo> fleet-worker` 로 미리 빌드된 `fleet-worker`
# 바이너리를 설치. tarball 은 fleet-cli 와 동일 (`fleet-v<ver>-<target>.tar.gz`),
# 이 패키지는 그 안의 `fleet-worker` 파일만 추출한다.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/fleet-v{ version }-{ target }.tar.gz"
bin-dir = "fleet-worker"
pkg-fmt = "tgz"

[lib]
name = "fleet_worker"
path = "src/lib.rs"

[dependencies]
fleet-core = { workspace = true }
fleet-transport = { workspace = true, features = ["mtls"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"

[dev-dependencies]
tokio = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tempfile = "3"
